--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <title>CREAM: Continual Retrieval on Dynamic Streaming Corpora with Adaptive Soft Memory | KDD 2026</title>
 
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico" />
-  <link rel="apple-touch-icon" href="static/images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="static/images/round_square@2x.png" />
+  <link rel="apple-touch-icon" href="static/images/round_square@2x.png" />
 
   <!-- Critical CSS -->
   <link rel="stylesheet" href="static/css/bulma.min.css" />
@@ -243,7 +243,7 @@
               <div class="is-size-5 publication-authors">
                 <!-- Add personal homepages if you want; currently plain text -->
                 <span class="author-block">HuiJeong Son<sup>*</sup>,</span>
-                <span class="author-block">Hyeongu Kang<sup>*</sup>,</span>
+                <span class="author-block">Hyeongu Kang,</span>
                 <span class="author-block">Sunho Kim,</span>
                 <span class="author-block">Subeen Ho,</span>
                 <span class="author-block">SeongKu Kang,</span>
@@ -256,7 +256,6 @@
                   Korea University &amp; Yonsei University<br />
                   KDD 2026 (Jeju Island, Republic of Korea)
                 </span>
-                <span class="eql-cntrb"><small><br /><sup>*</sup>Indicates Equal Contribution</small></span>
               </div>
 
               <div class="column has-text-centered">
@@ -323,7 +322,7 @@
           <!-- Put your demo gif here -->
           <img src="static/images/demo.gif" alt="Demo GIF" style="max-width:100%; height:auto;">
           <p style="margin-top: 10px; color: #6b7280; font-size: 0.95rem;">
-            (Optional) Replace <code>static/images/demo.gif</code> with your actual demo.
+            Soft memory with query, pseudo-positive samples, and negative samples accross sessions
           </p>
         </div>
       </div>
