--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
 
         <figure class="has-text-centered">
-          <img src="static/images/motivation.png"
+          <img src="static/images/motivation.jpg"
                alt="Motivation: Hard memory vs. soft memory for continual retrieval"
                style="max-width:100%; height:auto; border-radius: 12px;">
           <figcaption style="margin-top:10px; color:#6b7280;">
@@ -366,7 +366,7 @@
         </div>
 
         <figure class="has-text-centered">
-          <img src="static/images/framework.png"
+          <img src="static/images/framework.jpg"
                alt="CREAM framework overview"
                style="max-width:100%; height:auto; border-radius: 12px;">
           <figcaption style="margin-top:10px; color:#6b7280;">
