--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
     <!-- Demo GIF (optional) -->
     <section class="section">
       <div class="container is-max-desktop">
-        <h2 class="title is-3">Demo</h2>
         <div class="content has-text-centered">
           <!-- Put your demo gif here -->
           <img src="static/images/demo.gif" alt="Demo GIF" style="max-width:100%; height:auto;">
@@ -381,7 +380,7 @@
     <!-- Experimental Results -->
     <div class="columns is-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Experimental Results (Summary)</h2>
+        <h2 class="title is-3">Experimental Results</h2>
 
         <div class="content">
           <p>
