--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   <div class="container is-max-desktop">
 
     <!-- Motivation -->
-    <div class="columns is-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Motivation</h2>
         <div class="content">
@@ -346,7 +346,7 @@
     <hr />
 
     <!-- Framework Overview -->
-    <div class="columns is-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Framework Overview</h2>
         <div class="content">
@@ -378,7 +378,7 @@
     <hr />
 
     <!-- Experimental Results -->
-    <div class="columns is-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
 
