--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Motivation</h2>
-        <div class="content">
+        <div class="content has-text-justified">
           <p>
             In continual retrieval over dynamic streaming corpora, topics and semantics evolve over time.
             Existing memory-based methods typically rely on a fixed set of predefined queries with ground-truth documents
@@ -348,8 +348,8 @@
     <!-- Framework Overview -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Framework Overview</h2>
-        <div class="content">
+        <h2 class="title is-3">Framework Overview</h2> 
+        <div class="content has-text-justified">
           <p>
             CREAM operates in sessions and repeats three stages:
             <b>(1) Retrieval</b> using fine-grained token-level similarity (late-interaction style),
@@ -382,7 +382,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
 
-        <div class="content">
+        <div class="content has-text-justified">
           <p>
             We evaluate CREAM on two continual retrieval benchmarks (LoTTE and MSMARCO) under shared-pool evaluation.
             CREAM consistently outperforms strong unsupervised baselines across sessions and achieves performance comparable to
